Refresh all the things

--- a/webapp/templates/base.html.twig
+++ b/webapp/templates/base.html.twig
@@ -57,14 +57,22 @@
         });
 
         /* toggle refresh if set */
+        {#
         {% if refresh is defined and refresh %}
         $('#refresh-navitem').on('click', function () {
             toggleRefresh('{{ refresh.url | raw }}', {{ refresh.after }}, {{ refresh.ajax | default(0) }});
         });
         {% endif %}
+        #}
         /* Enable page refresh if set if wanted by the page, and wanted by the user */
         {% if refresh is defined and refresh and refresh_flag %}
-        enableRefresh('{{ refresh.url | raw }}', {{ refresh.after }}, {{ refresh.ajax | default(0) }});
+            {% if refresh.url is defined %}
+                enableRefresh('{{ refresh.url | raw }}', {{ refresh.after }}, {{ refresh.ajax | default(0) }});
+            {% else %}
+                {% for r in refresh %}
+                    enableRefresh('{{ r.url | raw }}', {{ r.after }}, true, '{{ r.target }}');
+                {% endfor %}
+            {% endif %}
         {% endif %}
 
         initializeAjaxModals();
