--- a/webapp/templates/jury/partials/submission_list.html.twig
+++ b/webapp/templates/jury/partials/submission_list.html.twig
@@ -42,8 +42,8 @@
             <span class="badge text-bg-danger">{{ submissionCounts.queued }} queued (from {{submissionCounts.perteam}} teams)</span>
         {% endif %}
 
-        {% if submissionCounts.public > 0 %}
-            <span class="badge text-bg-secondary">{{ submissionCounts.public }} public</span>
+        {% if submissionCounts.inContest > 0 %}
+            <span class="badge text-bg-secondary">{{ submissionCounts.inContest }} in contest</span>
         {% endif %}
     </div>
 
